[gd_scene load_steps=7 format=2]

[ext_resource path="res://tilesheet_complete.png" type="Texture" id=1]
[ext_resource path="res://objects/door/Door.gd" type="Script" id=2]
[ext_resource path="res://actions/Action.gd" type="Script" id=3]
[ext_resource path="res://actions/ActionsProvider.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="Door" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="DoorClosed" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 576, 1024, 64, 64 )

[node name="DoorOpened" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 704, 1088, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ActionsProvider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionsProvider"]
shape = SubResource( 2 )

[node name="Open" type="Node" parent="ActionsProvider"]
script = ExtResource( 3 )
description = "Open the door"

[node name="Close" type="Node" parent="ActionsProvider"]
script = ExtResource( 3 )
description = "Close the door"
[connection signal="area_entered" from="ActionsProvider" to="ActionsProvider" method="_on_actor_entered"]
[connection signal="action_performed" from="ActionsProvider/Open" to="." method="set_opened" binds= [ true ]]
[connection signal="action_performed" from="ActionsProvider/Close" to="." method="set_opened" binds= [ false ]]
